# vk_wall_handler

./: .gitignore  Dockerfile  LICENSE  README.md  default.env  pyproject.toml
service/: __main__.py  config.py  domain.py  exceptions.py  worker.py
service/clients/backend/: __init__.py  client.py  serializers.py
service/clients/vkclient/: __init__.py  client.py  serializers.py
vkapp/service/: __main__.py
