[tool.poetry]
name = "vk_wall_handler"
version = "0.1.0"
description = ""
authors = ["Evgenij Karpov <gedrip87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
glom = "^20.11.0"
httpx = "^0.19.0"
arrow = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
